@@ -31,6 +31,7 @@
 class QMenu;
 class QAction;
 class QComboBox;
+class KDoubleNumInput;
 class CExportThemeDialog;
 
 class CGradientPreview : public QWidget
@@ -106,7 +107,11 @@ class QtCurveConfig : public QWidget, private Ui::QtCurveConfigBase
 
     private:
 
-    void setupPreviewTab();
+    void setupGradientsTab();
+    void setupShadesTab();
+    void setupShade(KDoubleNumInput *w, int shade);
+    void populateShades(const Options &opts);
+    bool diffShades(const Options &opts);
     void setPasswordChar(int ch);
     void loadStyle(const QString &file);
     void setOptions(Options &opts);
@@ -121,6 +126,7 @@ class QtCurveConfig : public QWidget, private Ui::QtCurveConfigBase
     CExportThemeDialog       *exportDialog;
     CGradientPreview         *gradPreview;
     CustomGradientCont       customGradient;
+    KDoubleNumInput          *shades[NUM_STD_SHADES];
 };
 
 #endif
