@@ -7488,8 +7488,10 @@ void QtCurveStyle::shadeColors(const QColor &base, QColor *vals) const
 {
     QTC_SHADES
 
+    bool useCustom(NUM_STD_SHADES==opts.customShades.size());
+
     for(int i=0; i<NUM_STD_SHADES; ++i)
-        shade(base, &vals[i], QTC_SHADE(opts.contrast, i));
+        shade(base, &vals[i], useCustom ? opts.customShades[i] : QTC_SHADE(opts.contrast, i));
     shade(base, &vals[SHADE_ORIG_HIGHLIGHT], opts.highlightFactor);
     shade(vals[4], &vals[SHADE_4_HIGHLIGHT], opts.highlightFactor);
     shade(vals[2], &vals[SHADE_2_HIGHLIGHT], opts.highlightFactor);
