@@ -28,6 +28,7 @@
 21. New default button indicator - glow. Only applicable if etching
     or shadowing.
 22. Allow up to 5 custom defined gradients.
+23. Allow custom shades to be specified.
 
 0.58
 ----
